# Engineering-Control-Frame

./: .gitignore  README.md
robotic_arm_control/: CMakeLists.txt  package.xml
robotic_arm_control/include/algorithm/: kinematic.hpp  plannig.hpp  planning.hpp
robotic_arm_control/include/data_types/: limits_struct.hpp  solutions_struct.hpp  trajectory_struct.hpp
robotic_arm_control/include/detail/: macros.hpp
robotic_arm_control/include/interfaces/: kinematic_base_interface.hpp  planning_base_interfaces.hpp
robotic_arm_control/src/algorithm/: kinematic.cpp  planing.cpp  planning.cpp
robotic_arm_control/src/data_types/: limits_struct.cpp  solutions_struct.cpp
robotic_arm_description/: package.xml  setup.py
robotic_arm_description/launch/: robotic_arm_visual.py  view_robot_launch.py
robotic_arm_description/meshes/visual/: Link3.STL  Link6.STL
robotic_arm_description/urdf/: robotic_arm.urdf
src/robotic_arm_control/: CMakeLists.txt  package.xml
src/robotic_arm_control/include/algorithm/: kinematic.hpp  planning.hpp
src/robotic_arm_control/include/data_types/: limits_struct.hpp  trajectory_struct.hpp
src/robotic_arm_control/include/detail/: macros.hpp
src/robotic_arm_control/include/interfaces/: kinematic_base_interface.hpp  planning_base_interfaces.hpp
src/robotic_arm_control/src/: main.cpp
src/robotic_arm_control/src/algorithm/: kinematic.cpp
src/robotic_arm_control/src/data_types/: limits_struct.cpp  trajectory_struct.cpp
src/robotic_arm_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/robotic_arm_description/config/: gazebo_robot_control.yaml
src/robotic_arm_description/launch/: robotic_arm_visual.py  rrbot_world.launch.py
src/robotic_arm_description/meshes/: Link1.STL  Link1.dae  Link3.dae  Link4.dae  Link5.dae  Link6.dae  Link7.STL  Link7.dae  base_link.dae
src/robotic_arm_description/meshes/visual/: Link5.STL  base_link.STL
src/robotic_arm_description/urdf/: robot.urdf.xacro  robot_include.urdf.xacro  robot_ros_control.urdf.xacro  robotic_arm.urdf  robotic_arm.xacro  rrbot.gazebo
src/robotic_arm_model_envelope/: CMakeLists.txt
src/robotic_arm_model_envelope/include/: parse_stl_tool.hpp  safe_queue.hpp  thread_pool.hpp
src/robotic_arm_model_envelope/include/math_library/: principal_components_analysis.hpp
src/robotic_arm_model_envelope/include/visualation/: visual_pulgin.hpp
src/robotic_arm_model_envelope/src/: main.cpp  parse_stl_tool.cpp
src/robotic_arm_model_envelope/src/math_library/: principal_components_analysis.cpp
