<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>engineering_control</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="wjpzy20230551@qq.com">Ju_p</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>Eigen3</depend>
  <depend>sensor_msgs</depend>
  <depend>engineering_interfaces</depend>
  <depend>rclcpp</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
